	  current locale is respected when using the date as the title. Fixes
	  bug #112606.
	* stickynotes.glade: Reworded some UI text to make it more HIG
	  compliant.
	* stickynotes.c: Changed how custom colors are applied. Now, when the
	  "color from system theme" is used, the current gtk theme is actually
	  used (didn't before). There are still a few kinks to iron out here.


2003-05-21  Loban A Rahman <loban@earthling.net>

	* stickynotes_applet.c, stickynotes_applet_callbacks.*:
	  Fixed compile warnings,
	  Bug #112616 now fully fixed, but there seems to be a bug in the
	  listener for bonobo_ui_components. They trigger unnecessarily.
	* stickynotes.c: Changed UI slightly. Now, when a note is locked, the
	  button shows a locked picture with a "Locked Note" tooltip, rather
	  than a unlocked picture with a "Unlock Note" tooltip. And vice
	  versa.
	* TODO: Updated.
	* stickynotes.c: Fixed an infinite loop when toggling lock using menu.
	* *.h, *.c: Bug #109427 now fully done. Individual note colors are now
	possible. Have fun.

2003-05-20  Dennis Cranston <dennis_cranston at yahoo com>

	* stickynotes.glade:  Fix various HIG bugs.
	  a. Fix mnemonic conflicts for Height/Help & Color/Close.  
	  b. The preferences dialog should not be resizable.  
  	  c. The term 'Applet' should not be exposed to the user. 
	  d. The preferences dialog should not have a separator to be
             consistant with all other applet preference dialogs in
             gnome-applets & gnome-panel modules.
	  This fixes bug #113468.
	     
2003-05-20  Loban A Rahman <loban@earthling.net>

	* stickynotes_applet.h: Fixed typo in header declaration.
	* stickynotes_applet.c: Code cleanup and speedup.
	* stickynotes.*: Added lock checkmenu item to note menu. This is still
	slightly buggy.
	* *.c *.h: More code and file format cleanup. Once again window
	management buttons are only visible when a note is in focus. Also, a
	note popup menu is now generated by libglade.