@@ -8,7 +8,8 @@
 	* stickynotes.c: Changed how custom colors are applied. Now, when the
 	  "color from system theme" is used, the current gtk theme is actually
 	  used (didn't before). There are still a few kinks to iron out here.
-
+	* stickynotes.c, stickynotes.h, stickynotes_applet_callbacks.c:
+	  Unspegettified internal API. :-)
 
 2003-05-21  Loban A Rahman <loban@earthling.net>
 
